--- a/Dissertation/part3.tex
+++ b/Dissertation/part3.tex
@@ -1352,18 +1352,18 @@ $C_{n}$ может быть записана:
 
 \section{Метод Якобсена} \label{sec:ch3/sect7}
 Метод Якобсена основан на определении максимума спектра на основании трех точек БПФ \cite{4205098, ericjacobsen_cite, jacobsen1994local, jacobsen2007fast}. В качестве интерполируемой функции выступает квадратичная функция, графиком которой является парабола, близкая к спектру функции исследуемого напряжения (вершина параболы и максимальное значение спектра делят графики пополам). 
-Пусть для квадратичной функции $u$ с максимальным коэффициентом функции $u(k)$  и истинным коэффициентом, достигнутым в максимуме $u(k + \delta)$. Тогда можно описать значение функции   в выбранных точках $k-1, k , k+1$ следующим образом:
+Пусть для квадратичной функции $u$ с максимальным коэффициентом функции $u(f_k)$  и истинным коэффициентом, достигнутым в максимуме $u(f_k + \delta)$. Тогда можно описать значение функции   в выбранных точках $f_{k-1}, f_k , f_{k+1}$ следующим образом:
 \begin{equation}
 \label{eq:equation2.7.1}
-u(k-1) = a \cdot (k-1-\delta)^2+b
+u(f_{k-1}) = a \cdot (f_{k-1}-\delta)^2+b
 \end{equation}	
 \begin{equation}
 \label{eq:equation2.7.2}
-u(k) = a \cdot (k-\delta)^2+b
+u(f_k) = a \cdot (f_k-\delta)^2+b
 \end{equation}	
 \begin{equation}
 \label{eq:equation2.7.3}
-u(k+1) = a \cdot (k+1-\delta)^2+b,
+u(f_{k+1}) = a \cdot (f_{k+1}-\delta)^2+b,
 \end{equation}	
 Установив параметр $k$ в \ref{eq:equation2.7.1} равным $0$, получим следующее выражение для $\delta$:
 \begin{equation}
@@ -1375,10 +1375,10 @@ u(k+1) = a \cdot (k+1-\delta)^2+b,
 
 \begin{equation}
 \label{eq:equation2.7.5}
-\delta = Re(\dfrac{(u(k+1)-u(k-1))}{2 \cdot u(k)-u(k+1)-u(k-1)})
+\bigtriangleup f = \mathrm{Re}(\dfrac{(u(k+1)-u(k-1))}{2 \cdot u(k)-u(k+1)-u(k-1)})
 \end{equation}
 
-Параметр $\delta$  определяет отклонение порядкового номера максимальной частоты, найденный с использованием БПФ, от порядкового номера истинной максимальной частоты гармоник напряжения. Для всех интерполяционных методов порядковый номер истинной максимальной частоты и частота гармоник напряжения определяются по следующим формулам:
+Параметр $\bigtriangleup f$  определяет отклонение порядкового номера максимальной частоты, найденный с использованием БПФ, от порядкового номера истинной максимальной частоты гармоник напряжения. Для всех интерполяционных методов порядковый номер истинной максимальной частоты и частота гармоник напряжения определяются по следующим формулам:
 \begin{equation}
 	\label{eq:equation2.7.6}
 	f_{peak} = f_k + \bigtriangleup f
