--- a/Presentation/styles.tex
+++ b/Presentation/styles.tex
@@ -63,6 +63,7 @@
 \setbeamerfont{bibliography entry title}{size=\small}
 \setbeamerfont{bibliography entry location}{size=\small}
 \setbeamerfont{bibliography entry note}{size=\small}
+\setbeamerfont{footline}{size=\bf\Large}
 % Аналогично можно настроить и другие размеры.
 % Названия классов элементов можно найти здесь
 % http://www.cpt.univ-mrs.fr/~masson/latex/Beamer-appearance-cheat-sheet.pdf
