--- a/images/IT/Sparse Fourier Transform.tex
+++ b/images/IT/Sparse Fourier Transform.tex
@@ -16,9 +16,9 @@
 \begin{tikzpicture}
 \draw (0,0) -- (7,0);
 
-\node[left,scale=1,font=\small] at (-1.4,6){\large{ВРЕМЯ}};
-\node[left,scale=1,font=\small] at (-0.7,5.5){\large{ВЫПОЛНЕНИЯ}};
-\node[left,scale=1,font=\small] at (-2,5){\large{[s]}};	
+\node[left,scale=1,font=\small] at (0.6,7){\large{ВРЕМЯ}};
+\node[left,scale=1,font=\small] at (0.8,6.6){\large{ВЫПОЛ-}};
+\node[left,scale=1,font=\small] at (0.9,6.2){\large{НЕНИЯ [s]}};	
 
 
 % Значения осей
@@ -87,8 +87,8 @@
 \draw[ultra thick, magenta] (6.4,1.8) -- (7,2);
 
 %легенда
-\draw[ultra thick, red] (1, 6.3) -- (1.5, 6.3) node[right, black, font=\small] {-- \large{FFTW ( with FFTW MEASURE}};
-\node[right, black, font=\small] at (1.8, 5.8){\large{and FFTW ESTIMATE)}};
+\draw[ultra thick, red] (1, 6.3) -- (1.5, 6.3) node[right, black, font=\small] {-- \large{FFTW (МЕРА FFTW}};
+\node[right, black, font=\small] at (1.8, 5.8){\large{И ОЦЕНКА FFTW)}};
 \draw[ultra thick, blue] (1, 5.3) -- (1.5, 5.3) node[right, black, font=\small] {-- \large{SFFT v1}};
 \draw[ultra thick, magenta] (1, 4.8) -- (1.5, 4.8) node[right, black, font=\small] {-- \large{SFFT v3}};
 
