--- a/images/IT/set_of_standards.tex
+++ b/images/IT/set_of_standards.tex
@@ -36,15 +36,15 @@
 \node[left] at (0,4.5){\LARGE{$0.9$}};
 \node[left] at (0,5){\LARGE{$1$}};
 \node[below] at (2.65,0){\LARGE{$h$}};
-\node[above] at (2.95,0){\LARGE{$B$}};
+\node[above] at (2.95,0){\Huge{$B$}};
 
 \draw[<->] (2.5,-0.2) -- (2.8,-0.2) coordinate (x axis);
 \draw[thick, black!100] (2.5,0) -- (2.5,-0.25);
 \draw[thick, black!100] (2.8,0) -- (2.8,-0.25);
 
 % Оси и сетка
-\draw[->] (0,0) -- (7.5,0) coordinate (x axis) node[above] {\LARGE{$w$}};
-\draw[->] (0,0) -- (0,5) coordinate (y axis) node[right] {\LARGE{$S(w)$}};
+\draw[->] (0,0) -- (7.5,0) coordinate (x axis) node[above] {\Huge{$w$}};
+\draw[->] (0,0) -- (0,5) coordinate (y axis) node[right] {\Huge{$S(w)$}};
 
 % Графики
 % Набор эталонов #1
@@ -59,10 +59,10 @@
 
 
 % Легенда
-\draw[ultra thick, black!100, dashed] (5, 4.9) -- (5.3, 4.9) node[right, black, font=\small] {-- \Large{Результаты ДПФ (набор \# $1$)}};
-\draw[ultra thick, red] (5, 4.7) sin (5.3, 4.7) node[right, black, font=\small] {-- \Large{Набор эталонов \# $1$}};
-\draw[ultra thick, violet] (5, 4.5) sin (5.3, 4.5) node[right, black, font=\small] {-- \Large{Набор эталонов \# $2$}};
-\draw[ultra thick, cyan] (5, 4.3) sin (5.3, 4.3) node[right, black, font=\small] {-- \Large{Набор эталонов \# $3$}};
+\draw[ultra thick, black!100, dashed] (4.3, 4.9) -- (4.6, 4.9) node[right, black, font=\small] {-- \huge{Результаты ДПФ (набор \# $1$)}};
+\draw[ultra thick, red] (4.3, 4.7) sin (4.6, 4.7) node[right, black, font=\small] {-- \huge{Набор эталонов \# $1$}};
+\draw[ultra thick, violet] (4.3, 4.5) sin (4.6, 4.5) node[right, black, font=\small] {-- \huge{Набор эталонов \# $2$}};
+\draw[ultra thick, cyan] (4.3, 4.3) sin (4.6, 4.3) node[right, black, font=\small] {-- \huge{Набор эталонов \# $3$}};
 \end{tikzpicture} 
 \end{center}
 \end{document}
