--- a/images/IT/Fundamental frequency offset versus noise level.tex
+++ b/images/IT/Fundamental frequency offset versus noise level.tex
@@ -144,14 +144,14 @@
 \draw[ultra thick, black] (6.5,0) -- (7,0);
 
 % Легенда
-\draw[ultra thick, black] (3, 5.9) -- (3.5, 5.9) node[right, black, font=\small] {- метод корреляционных функций};
-\draw[ultra thick, blue]  (3, 5.6) -- (3.5, 5.6) node[right, black, font=\small] {- метод Якобсена};
-\draw[ultra thick, green] (3, 5.3) -- (3.5, 5.3) node[right, black, font=\small] {- метод Макледона};
-\draw[ultra thick, black!50] (3, 5) -- (3.5, 5) node[right, black, font=\small] {- второй метод Квина};
-\draw[ultra thick, red] (3, 4.7) -- (3.5, 4.7) node[right, black, font=\small] {- метод Грэндка};
-\draw[ultra thick, magenta] (3, 4.4) -- (3.5, 4.4) node[right, black, font=\small] {- алгоритм параболическоц};
-\node[right, black, font=\small] at (3.75, 4.1){интерполяции};
-\draw[ultra thick,cyan] (3, 3.8) -- (3.5, 3.8) node[right, black, font=\small] {- алгоритм интерполяции Гаусса};
+\draw[ultra thick, black] (3, 5.7) -- (3.5, 5.7) node[right, black, font=\small] {-- \Large{метод корреляционных функций}};
+\draw[ultra thick, blue]  (3, 5.3) -- (3.5, 5.3) node[right, black, font=\small] {-- \Large{метод Якобсена}};
+\draw[ultra thick, green] (3, 4.9) -- (3.5, 4.9) node[right, black, font=\small] {-- \Large{метод Макледона}};
+\draw[ultra thick, black!50] (3, 4.5) -- (3.5, 4.5) node[right, black, font=\small] {-- \Large{второй метод Квина}};
+\draw[ultra thick, red] (3, 4.1) -- (3.5, 4.1) node[right, black, font=\small] {-- \Large{метод Грэндка}};
+\draw[ultra thick, magenta] (3, 3.7) -- (3.5, 3.7) node[right, black, font=\small] {-- \Large{алгоритм параболическоц}};
+\node[right, black, font=\small] at (3.75, 3.3){\Large{интерполяции}};
+\draw[ultra thick,cyan] (3, 2.9) -- (3.5, 2.9) node[right, black, font=\small] {-- \Large{алгоритм интерполяции Гаусса}};
 \end{tikzpicture}
 \end{center}
 \end{document}
