--- a/images/IT/Jacobsen's_method.tex
+++ b/images/IT/Jacobsen's_method.tex
@@ -17,7 +17,7 @@
 \begin{center}
 \begin{tikzpicture}[scale=1,decoration={brace,raise=5pt}]
 \node[left,font=\tiny] at (3.5,0){\normalsize{$0$}};
-\node[right,scale=1] at (9.5,-0.7){Номер отчета ДПФ}; 
+\node[right,scale=1] at (9.0,-0.7){НОМЕР ОТЧЕТА ДПФ}; 
 \draw[dashed] (4.1,6)node[left,font=\tiny] {\Large{A}};
 
 
@@ -125,9 +125,9 @@
 %\draw[ultra thick, cyan] (4, 5.9) -- (4.5, 5.9) node[right, black, font=\small] {- Кубический сплайн };
 %\node[right, black, font=\small] at (4.75, 5.5){интерполированный};
 
-\draw[ultra thick, red] (9, 5.3) -- (9.3, 5.3) node[right, black, font=\small] {- Выход ДПФ};
-\draw[ultra thick, cyan, dashed] (9, 5) -- (9.3, 5) node[right, black, font=\small] {- Интерполированный};
-\node[right, black, font=\small] at (9.54, 4.7) {сигнал};
+\draw[ultra thick, red] (9, 5.4) -- (9.3, 5.4) node[right, black, font=\small] {-- \Large{Выход ДПФ}};
+\draw[ultra thick, cyan, dashed] (9, 5) -- (9.3, 5) node[right, black, font=\small] {-- \Large{Интерполиро-}};
+\node[right, black, font=\small] at (9.54, 4.6) {\Large{ванный сигнал}};
 \end{tikzpicture}
 
 \end{center}
